[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-intelligence-ai"
version = "0.1.0"
description = "AI-driven pricing and inventory intelligence system using LangChain, LangGraph, and Gemini"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "pricing", "inventory", "langchain", "gemini", "agent"]

dependencies = [
    "langchain>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langgraph>=0.0.40",
    "google-generativeai>=0.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
